Fix header z-index issue and search overlapping

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1124,6 +1124,10 @@ video {
   top: auto;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
